[project]
name = "labthings-fastapi"
version = "0.0.10"
authors = [
  { name="Richard Bowman", email="richard.bowman@cantab.net" },
]
description = "A test implementation of LabThings using FastAPI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic ~= 2.10.6",
  "numpy>=1.20",
  "jsonschema",
  "typing_extensions",
  "anyio ~=4.0",
  "httpx",
  "fastapi[all]>=0.115.0",
  "zeroconf >=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0, <8",
  "pytest-cov",
  "mypy>=1.6.1, <2",
  "ruff>=0.1.3",
  "types-jsonschema",
  "Pillow",
  "flake8",
  "flake8-pyproject",
  "flake8-docstrings",
  "flake8-rst",
  "flake8-rst-docstrings",
  "pydoclint",
  "sphinx-rtd-theme",
  "sphinx>=7.2",
  "sphinx-autoapi",
]

[project.urls]
"Homepage" = "https://github.com/rwb27/labthings-fastapi"
"Bug Tracker" = "https://github.com/rwb27/labthings-fastapi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src"
]
artifacts = ["src/*.json"]

[tool.hatch.build.targets.wheel]
artifacts = ["src/*.json"]

[tool.pytest.ini_options]
addopts = [
    "--cov=labthings_fastapi",
    "--cov-report=term",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:htmlcov",
    "--cov-report=lcov",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "DOC"]
ignore = [
    "D203",  # incompatible with D204
    "D213",  # incompatible with D212
    "DOC402",  # doesn't work with sphinx-style docstrings, use pydoclint
    "DOC201",  # doesn't work with sphinx-style docstrings, use pydoclint
    "DOC501",  # doesn't work with sphinx-style docstrings, use pydoclint
    "DOC502",  # doesn't work with sphinx-style docstrings, use pydoclint
]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "DOC"]
"docs/*" = ["D", "DOC"]

[tool.pydoclint]
style = "sphinx"
arg-type-hints-in-docstring = false
skip-checking-short-docstrings = false
allow-init-docstring = true
check-style-mismatch = true
show-filenames-in-every-violation-message = true
check-return-types = false
check-class-attributes = false  # prefer docstrings on the attributes
check-yield-types = false  # use type annotations instead

[tool.mypy]
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]

[tool.flake8]
extend-ignore = [
  "DOC301",  # allow class + __init__ docstrings
  "D202",  # conflicts with ruff format
]
max-line-length = 88
rst-roles = [
    "class",
    "func",
    "mod",
    "ref",
    "deco",
    "doc",
]
rst-directives = [
    "todo",
]

[project.scripts]
labthings-server = "labthings_fastapi.server.cli:serve_from_cli"
